src/objects/DNBoptimizer__optimizerpackage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DNBoptimizer__FamilyTreeJobId__c</fullName>
        <description>Family Tree Job Id</description>
        <label>FamilyTreeJobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__FamilyTreeJobStatus__c</fullName>
        <description>Family Tree Job Status</description>
        <label>FamilyTreeJobStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBoptimizer__data__c</fullName>
        <label>Data</label>
        <type>TextArea</type>
    </fields>
    <label>Optimizer Package</label>
</CustomObject>